<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editbox">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_titil"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/fullname"
                android:background="@drawable/custom_editbox"
                android:drawableLeft="@drawable/user_icon"
                android:drawablePadding="8dp"
                android:hint="@string/full_name"
                android:padding="8dp"
                android:singleLine="true"
                android:lines="1"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:background="@drawable/custom_editbox"
                android:drawableLeft="@drawable/user_icon"
                android:drawablePadding="8dp"
                android:hint="@string/e_mail_ttil"
                android:padding="8dp"
                android:singleLine="true"
                android:lines="1"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_editbox"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/password_hint"
                android:singleLine="true"
                android:lines="1"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/conform_password"
                android:background="@drawable/custom_editbox"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/conform_password"
                android:singleLine="true"
                android:lines="1"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/biometric"
                android:background="@drawable/custom_editbox"
                android:drawableLeft="@drawable/ic_fingerprint"
                android:drawablePadding="8dp"
                android:hint="Enable Biometric"
                android:singleLine="true"
                android:lines="1"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/loginButton"
                android:background="@drawable/custom_editbox"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/purple" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
